syntax = "proto3";

package frogchain.investibc;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "frogchain/investibc/params.proto";
import "frogchain/investibc/deposit_denom.proto";

option go_package = "frogchain/x/investibc/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/frogchain/investibc/params";
  
  }
  
  // Queries a DepositDenom by index.
  rpc DepositDenom (QueryGetDepositDenomRequest) returns (QueryGetDepositDenomResponse) {
    option (google.api.http).get = "/frogchain/investibc/deposit_denom";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDepositDenomRequest {}

message QueryGetDepositDenomResponse {
  DepositDenom DepositDenom = 1 [(gogoproto.nullable) = false];
}

